<resources>
    <string name="app_name">ToDoListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InProcess">In Process</string>
    <string name="TaskGroup">Task Group</string>
    <string name="ViewTask">View Task</string>
    <string name="Search">Search . . .</string>
    <string name="Home">Home</string>
    <string name="Calendar">Calendar</string>
    <string name="Focus">Focus</string>
    <string name="FocusMode">Focus Mode</string>
    <string name="Setting">Setting</string>
    <string name="AddTask">ADD TASK</string>
    <string name="Category">Category</string>
    <string name="TaskName">Task Name</string>
    <string name="TaskDes">Description</string>
    <string name="Date">Date</string>
    <array name="Priority">
        <item>High</item>
        <item>Medium</item>
        <item>Normal</item>
    </array>

    <string name="Start">Start</string>
    <string name="Continue">Continue</string>
    <string name="cancel">Cancel</string>

    <string name="Time">Time</string>
    <string name="titlePriority">Priority</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>