<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FragmentFocus">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/FocusMode"
        android:textColor="@color/dark_purple"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/txtFocusMode"/>

    <FrameLayout
        android:padding="48dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center"
        android:id="@+id/layout_clock"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFocusMode">

        <ProgressBar
            android:id="@+id/progressCircular"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateOnly="false"
            android:max="100"
            android:progress="85"
            android:progressDrawable="@drawable/bg_process_bar" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center">

          <NumberPicker
              android:id="@+id/txt_minus"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:text="20"
              android:textColor="@color/dark_purple"
              android:textSize="36sp"
              android:textStyle="bold" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:text=":"
              android:textColor="@color/dark_purple"
              android:textSize="36sp"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/txt_second"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:text="00"
              android:textColor="@color/dark_purple"
              android:textSize="36sp"
              android:textStyle="bold" />
      </LinearLayout>
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btn_start"
        android:text="@string/Start"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layout_clock"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="@drawable/bg_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/txtFocusMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_clock"
        android:weightSum="2"
        android:padding="12dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_clock"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/bg_button"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_clock"
            android:layout_weight="1"
            android:text="@string/Continue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/bg_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>