<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Wellcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hi, Atena !"
                style="@style/Heading4"/>

            <TextView
                android:id="@+id/txt_Wellcome_2"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Body2"
                android:text="Good morning"/>

            <EditText
                android:id="@+id/Search"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/Search"
                android:drawableStart="@drawable/search"
                android:drawablePadding="16dp"
                android:drawableTint="@color/dark_purple"
                style="@style/SearchBar"
                android:padding="16dp"
                android:background="@drawable/bg_edt_search"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_detail_task_day"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginTop="24dp"
                android:weightSum="5"
                android:layout_gravity="center">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/txt_guess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Your today task almost done !"
                        style="@style/Body1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="12dp"/>

                    <Button
                        android:id="@+id/btn_viewAllTaskToday"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/ViewTask"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toTopOf="@+id/txt_guess"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center">

                    <ProgressBar
                        android:id="@+id/progressCircular"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:indeterminateOnly="false"
                        android:progress="85"
                        android:max="100"
                        android:progressDrawable="@drawable/bg_process_bar"/>

                    <TextView
                        android:id="@+id/tvProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="85%"
                        style="@style/Body1"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </FrameLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InProcess"
                    style="@style/Heading4"/>

                <TextView
                    android:id="@+id/txtValueInProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85"
                    android:padding="8dp"
                    style="@style/Body2"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_edt_search"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_InProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TaskGroup"
                        style="@style/Heading4"/>

                    <TextView
                        android:id="@+id/txtValueTaskGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="85"
                        android:padding="8dp"
                        style="@style/Body2"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/bg_edt_search"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_TaskGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>